# C-assignments

./: CMakeLists.txt  main.c
GestionEcritureLecture/: MatrixRW.c  MatrixRW.h  testMatrixRW.c  testMatrixRW.h
GestionMatrice/: t_matrice.c  t_matrice.h  test_t_matrice.c  test_t_matrice.h
GestionTableau2D/: 2DR.c  2DR.h  test2DR.c  test2DR.h
